elyreacts/src/pages/styles/Poster.module.scss
@import "../../variables.scss";

/*
    This is mobile-first, unlike the majority of other pages
*/

.container {
    display: grid;
    grid-template-rows: repeat(2, max-content);
    grid-template-columns: 1fr;
    grid-gap: 1.5rem;

    max-width: $max-width_content;

    & > div.imageContainer {
        position: relative;

        width: 100%;
        max-height: 80vh;

        background: $color_background_alt;

        & > img {
            height: 100%;
            width: 100%;

            object-fit: contain;
        }
    }

    & > div.informationContainer {
        display: grid;
        grid-template-rows: repeat(6, max-content);
        grid-template-columns: 1fr;
        // grid-gap: 0.5rem;
        align-items: baseline;

        margin: auto 0;

        & > * {
            margin: 0 auto;

            text-align: center;
        }

        & > h1 {
            margin-top: 1.5rem;
        }

        h2 {
            font-size: 0.8rem;
            font-weight: 700;
            text-transform: uppercase;
            color: $color_text_alt;
        }

        & > div.statsContainer {
            display: grid;
            grid-gap: 0.5rem;
            grid-template-columns: repeat(4, max-content);
            grid-auto-flow: row;
            align-items: center;

            & > small {
                font-size: 1rem;

                &:first-of-type {
                    margin-right: 1.5rem;
                }
            }
        }

        & > h2 {
            margin-top: 1.5rem;

            & + * {
                margin-top: 0.5rem;
            }
        }

        & > strong.price {
            margin-top: 1.5rem;

            font-size: 1.25rem;
        }

        & > div.authorContainer {
            display: flex;
            align-items: center;

            margin-top: 0.5rem;

            & > a > img {
                height: 2rem;
                width: 2rem;
                margin-right: 0.5rem;
                border-radius: 50%;
            }
        }

        & > p {
            margin: 0.25rem 0 0 0;
        }

        & > div.purchaseCTAContainer {
            display: flex;
            flex-direction: column;
            align-items: flex-start;

            margin-top: 1rem;

            & > p {
                margin: 0.25rem 0 0 0;

                text-align: left;
            }

            & > button,
            & > a {
                align-self: center;

                margin-top: 1.5rem;
            }
        }
    }
}

.lowerContent {
    position: relative;

    &::before {
        content: "";
        position: absolute;
        top: 0;
        left: 37.5%;

        height: 0.125rem;
        width: 25%;

        background-color: $color_grey_dark;
    }

    & > *:first-child {
        padding-top: 2.5rem;
    }
}

.iconLikes {
    display: inline-block;

    width: 1.5rem;
    height: 1rem;

    background-image: url("../../assets/images/heart.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.iconViews {
    display: inline-block;

    width: 1.5rem;
    height: 1rem;

    background-image: url("../../assets/images/views.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

@media only screen and (min-width: $media_width_tablet) {
    .container {
        grid-template-rows: 1fr;
        grid-template-columns: repeat(2, 1fr);

        & > div.informationContainer {
            & > * {
                margin: 0 auto 0 0;

                text-align: left;
            }
        }
    }
}

